force-app/main/default/objects/Pokemon_Reward_Rule__mdt/Pokemon_Reward_Rule__mdt.object-meta.xml
<CustomObject>
    <label>Pokemon Reward Rule</label>
    <pluralLabel>Pokemon Reward Rules</pluralLabel>
</CustomObject>