force-app/main/default/objects/Pokemon_Reward_Rule__mdt/fields/Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency__c</fullName>
    <label>Currency</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>