force-app/main/default/objects/Pokemon_Reward_Rule__mdt/fields/Done_Values__c.field-meta.xml
<CustomField>
    <fullName>Done_Values__c</fullName>
    <label>Done Values</label>
    <length>255</length>
    <type>Text</type>
</CustomField>