force-app/main/default/objects/Pokemon_Reward_Rule__mdt/fields/Edge_Field__c.field-meta.xml
<CustomField>
    <fullName>Edge_Field__c</fullName>
    <label>Edge Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>