force-app/main/default/objects/Pokemon_Reward_Rule__mdt/fields/Exclude_Field__c.field-meta.xml
<CustomField>
    <fullName>Exclude_Field__c</fullName>
    <label>Exclude Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>