force-app/main/default/objects/Pokemon_Reward_Rule__mdt/fields/Exclude_Values__c.field-meta.xml
<CustomField>
    <fullName>Exclude_Values__c</fullName>
    <label>Exclude Values</label>
    <length>255</length>
    <type>Text</type>
</CustomField>