force-app/main/default/objects/Pokemon_Reward_Rule__mdt/fields/Filter_Values__c.field-meta.xml
<CustomField>
    <fullName>Filter_Values__c</fullName>
    <label>Filter Values</label>
    <length>255</length>
    <type>Text</type>
</CustomField>