force-app/main/default/objects/Pokemon_Reward_Rule__mdt/fields/Multiplier_Cap__c.field-meta.xml
<CustomField>
    <fullName>Multiplier_Cap__c</fullName>
    <label>Multiplier Cap</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>