force-app/main/default/objects/Pokemon_Reward_Rule__mdt/fields/Multiplier_Field__c.field-meta.xml
<CustomField>
    <fullName>Multiplier_Field__c</fullName>
    <label>Multiplier Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>