force-app/main/default/objects/Pokemon_Reward_Rule__mdt/fields/Run_On__c.field-meta.xml
<CustomField>
    <fullName>Run_On__c</fullName>
    <label>Run On</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Insert</fullName>
            </value>
            <value>
                <fullName>Update</fullName>
            </value>
            <value>
                <fullName>Insert &amp; Update</fullName>
                <default>true</default>
                <label>Insert &amp; Update</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>