force-app/main/default/objects/Pokemon_Reward_Rule__mdt/fields/XP__c.field-meta.xml
<CustomField>
    <fullName>XP__c</fullName>
    <label>XP</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>